tests/snapshots/fences_compress_overlong_backticks.snap
---
source: tests/fences.rs
expression: "compress_fences(&input).join(\"\\n\")"
---
```rust
fn main() {}
```
