tests/snapshots/fences_compress_tilde_fences.snap
---
source: tests/fences.rs
expression: "compress_fences(&input).join(\"\\n\")"
---
```python
print('hello')
```
