tests/snapshots/fences_preserve_interior_conflict.snap
---
source: tests/fences.rs
expression: "compress_fences(&input).join(\"\\n\")"
---
````markdown
```rust
fn main() {}
```
````
