tests/snapshots/footnotes_blockquoted_fence_keeps_footnote_like_text.snap
---
source: tests/footnotes.rs
expression: "convert_footnotes(input).join(\"\\n\")"
---
> ```
> [^9]: Fenced text
> ```
## Footnotes
[^1]: Converted list item
