tests/snapshots/footnotes_mixed_blockquote_depths.snap
---
source: tests/footnotes.rs
expression: "convert_footnotes(input).join(\"\\n\")"
---
First reference.[^1]
Second reference.[^2]

> > [^1]: First
> [^2]: Second
