tests/snapshots/footnotes_nested_blockquote_definition.snap
---
source: tests/footnotes.rs
expression: "convert_footnotes(input).join(\"\\n\")"
---
Reference.[^1]

> > [^1]: First
> > [^2]: Second
