tests/snapshots/html_multi_row_table.snap
---
source: tests/html_snapshots.rs
expression: output
---
| Name  | Value |
| ----- | ----- |
| Alpha | 1     |
| Beta  | 22    |
