tests/snapshots/html_nested_table.snap
---
source: tests/html_snapshots.rs
expression: output
---
| Outer | Value |
| --- | --- |
| Inner Nested  | Tail |
| Inner |
| Nested |
| Inner  |
| ------ |
| Nested |
