tests/snapshots/html_sectioned_table.snap
---
source: tests/html_snapshots.rs
expression: output
---
| Name  | Value |
| ----- | ----- |
| Alpha | 1     |
| Beta  | 2     |
