tests/snapshots/inline_code_ed_suffix_stays_atomic.snap
---
source: tests/wrap/inline_code_suffix_snapshots.rs
expression: "wrap_lines(input, width)"
---
Values are `fetch`ed lazily on first
access by the runtime.
