tests/snapshots/inline_code_hyphen_compound_stays_atomic.snap
---
source: tests/wrap/inline_code_suffix_snapshots.rs
expression: "wrap_lines(input, width)"
---
Use a `code`-style identifier when
naming configuration keys.
